# EmpathyEngine

./: .gitignore  .gitmodules  README.md  pyproject.toml
demos/: demo_walkthroughs.py
empathy_engine/: __init__.py
empathy_engine/api/: main.py  schemas.py
empathy_engine/config/: settings.py
empathy_engine/context/: __init__.py  conversation.py  embedding.py  vector_store.py
empathy_engine/nlp/: __init__.py  emotion_correction.py  emotion_model.py  intensity.py  sarcasm.py  segmentation.py  spacy_utils.py
empathy_engine/pipeline/: engine.py
empathy_engine/utils/: errors.py  logging.py
empathy_engine/voice/: __init__.py  blending.py  params.py  ssml.py  tts_client.py
frontend/vite-app/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/vite-app/src/: App.tsx  index.css
frontend/vite-app/src/components/: waveformDemo.tsx
frontend/vite-app/src/components/ui/: input.tsx  waveform.tsx
tests/: test_intensity.py  test_voice_params.py
